removed images for test

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -39,7 +39,7 @@ The method used is developed from that in this YouTube video: www.youtube.com/wa
 
 <img src="images\test_mkth_builds_polygons_tidy.png" alt="hi" class="inline"/>
 
-![Book logo](images\test_mkth_builds_polygons_tidy.PNG)
+![Book logo](images\test_mkth_builds_polygons_tidy.png)
 
 
 
